# gofetch

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rag-build-plan.md
configs/: config.yaml
configs/generation/: default.yaml
configs/graph/: default.yaml
configs/ingestion/: default.yaml
configs/prompts/: citation.yaml
configs/retrieval/: bm25_only.yaml  dense_only.yaml  hybrid.yaml
data/: cpf-healthcare-financing.txt  cpf-housing-scheme.txt  cpf-overview.txt  cpf-retirement-withdrawals.txt  hdb-budget-for-flat.txt  hdb-eligibility-couples-families.txt  hdb-hfe-letter.txt  mas-anti-money-laundering.txt  mas-banking-regulation.txt  mas-fintech-innovation.txt  mas-fintech-sandbox.txt
eval/: evaluate.py  questions.json  results.json
src/: config.py  exceptions.py  logging.py  schemas.py
src/api/: dependencies.py  main.py
src/generation/: prompt.py  stream.py
src/graph/: builder.py  extractor.py  retriever.py  visualizer.py
src/ingestion/: base.py  chunker.py  embedder.py  indexer.py  loader.py
src/retrieval/: base.py  decomposer.py  dense.py  fusion.py  hyde.py  reranker.py  sparse.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_generation/: test_prompt.py
tests/test_ingestion/: test_chunker.py
tests/test_retrieval/: test_fusion.py  test_graph.py
ui/: app.py
