[project]
name = "gofetch"
version = "0.1.0"
description = "RAG system with hybrid search, GraphRAG, and cross-encoder re-ranking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "gradio>=5.0.0",
    "anthropic>=0.49.0",
    "qdrant-client>=1.13.0,<1.15.0",
    "sentence-transformers>=3.4.0",
    "rank-bm25>=0.2.2",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "networkx>=3.4",
    "pyvis>=0.3.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "rank_bm25.*",
    "pyvis.*",
    "sse_starlette.*",
    "langchain_text_splitters.*",
    "sentence_transformers.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
